<resources>
    <string name="app_name">H\'S VIBE</string>

    <!-- Common -->
    <string name="confirm">確認</string>
    <string name="confirm_to_exit">Tap \'Back\' again to exit the app.</string>
    <string name="wait">WAIT…</string>
    <string name="ok">OK</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="all">全部</string>
    <string name="check_it_out">查看</string>
    <string name="error_occurs">發生錯誤</string>
    <string name="retry">重試</string>
    <string name="operation_error">操作錯誤</string>
    <string name="unknown_network_error">Unknown error! Please check your API request or network connection.</string>
    <string name="channel_title_transaction">交易通知</string>
    <string name="channel_description_transaction">HSVibe 交易通知</string>

    <!-- Permissions -->
    <string name="permission_requires_location_title">為何需要位置權限?</string>
    <string name="permission_requires_location_content">分享您的位置資訊，可獲得周邊餐廳的即時優惠</string>
    <string name="permission_requires_camera_title">為何需要相機權限?</string>
    <string name="permission_requires_camera_content">我們需要使用您的攝影機，啟用掃描QRCode的功能</string>

    <!-- Security -->
    <string name="ssl_certification_error">SSL certification error!</string>
    <string name="ssl_error_confirm_to_continue">Are you sure you want to continue?</string>
    <string name="go_on_anyway">Go On Anyway!</string>
    <string name="cancel_eng">Cancel</string>

    <!-- Dialog -->
    <string name="hint_complete_info_title">會員資料尚未填寫完整</string>
    <string name="hint_complete_info_content">填寫會員資料以獲得完整服務</string>
    <string name="require_login_title">尚未登入</string>
    <string name="require_login_content">使用此功能需先登入</string>
    <string name="require_complete_info_title">尚未提供會員資料</string>
    <string name="require_complete_info_content">功能需提供完整會員資料</string>
    <string name="input_member_info">填入資料</string>
    <string name="login">登入</string>

    <!-- Member -->
    <string name="login_with_hsvibe">使用HSVIBE登入</string>
    <string name="later">稍後再說</string>
    <string name="member_center">會員中心</string>
    <string name="accumulated_spent">年度累積消費金額</string>
    <string name="nt_amount_is">NT. %s</string>
    <string name="member_card">H\'S VIBE 會員卡</string>
    <string name="accumulated_point">點數累積</string>
    <string name="my_coupons">我的優惠券</string>
    <string name="coupon_has">%d 張</string>
    <string name="personal_info">個人資料</string>
    <string name="change_password">修改密碼</string>
    <string name="point_record">點數紀錄</string>
    <string name="terms">使用條款</string>
    <string name="contact_us">聯絡我們</string>
    <string name="version_is">版本 %s</string>
    <string name="member_register_apply">會員註冊申請書</string>
    <string name="privacy_claim">隱私權保護聲明</string>
    <string name="hs_vibe_card">H\'S VIBE 齊來卡</string>
    <string name="please_read_carefully">請選取並詳細閱讀</string>
    <string name="password">密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="password_hint">請輸入至少6位數密碼</string>
    <string name="confirm_password_hint">請再輸入一次密碼</string>
    <string name="you_already_agree_the_terms">你已同意並接受我們的隱私條款&amp;服務條款</string>
    <string name="please_read_the_terms">請詳閱HSPay服務使用條款</string>

    <!-- Member Profile -->
    <string name="member_info">會員資料</string>
    <string name="first_name">姓</string>
    <string name="last_name">名</string>
    <string name="mobile_number">手機號碼</string>
    <string name="gender">性別</string>
    <string name="birthday">生日</string>
    <string name="place_of_residence">居住地</string>
    <string name="referrer_no">推薦人序號</string>
    <string name="hint_first_name">請輸入姓氏</string>
    <string name="hint_last_name">請輸入名子</string>
    <string name="hint_birthday">請選擇出生日期</string>
    <string name="hint_referrer_name">請輸入推薦人序號</string>
    <string name="please_select">(請選擇)</string>
    <string name="gender_male_cht">男</string>
    <string name="gender_female_cht">女</string>
    <string name="gender_other_cht">其他</string>
    <string name="gender_male_eng">male</string>
    <string name="gender_female_eng">female</string>
    <string name="gender_other_eng">other</string>
    <string name="birthday_format">%1$d-%2$02d-%3$02d</string>
    <string name="data_error">資料有誤</string>
    <string name="name_is_necessary">姓名為必填欄位</string>
    <string name="update_success">更新成功</string>
    <string name="update_failed">更新失敗</string>

    <!-- Points History -->
    <string name="your_points_and_expires_time">您有會員點數 %1$s 點，將於 %2$d&#8211;12&#8211;31 過期</string>
    <string name="remaining_points">剩餘點數: %s 點</string>

    <!-- Main -->
    <string name="tab_home">首頁</string>
    <string name="tab_explore">瀏覽</string>
    <string name="tab_coupon">優惠券</string>
    <string name="tab_wallet">錢包</string>

    <!-- Home -->
    <string name="guest">Guest</string>
    <string name="hi_there">Hi, %s</string>
    <string name="there">there!</string>
    <string name="accumulation_points">累積總點數</string>
    <string name="point">點</string>
    <string name="refer_no_is">推薦序號：%s</string>
    <string name="more_than_nine">9+</string>
    <string name="more">更多</string>
    <string name="hot_news">熱門消息</string>
    <string name="hot_coupon">熱門優惠券</string>
    <string name="more_discount">更多優惠</string>
    <string name="hilai_foods">漢來美食</string>
    <string name="hilai_hotel">漢來大飯店</string>

    <!-- Coupon -->
    <string name="all_districts">全部區域</string>
    <string name="stock_is">剩餘 %d 張</string>
    <string name="expires_at">有效日期 %s</string>
    <string name="point_has_int">%d 點</string>
    <string name="point_has_double">%.2f 點</string>
    <string name="point_has_string">%s 點</string>
    <string name="redeem_point">點數兌換</string>
    <string name="redeem_coupon">兌換優惠券</string>
    <string name="confirm_to_redeem">是否花費 %1$d 點數，兌換『%2$s』?</string>
    <string name="redeem">兌換</string>
    <string name="redeem_success">兌換成功</string>
    <string name="coupon_usage_description">店內消費可使用乙張(全台分店適用)，兌換成功，您可以前往我的優惠券查看</string>
    <string name="redeem_failed">兌換優惠券失敗</string>
    <string name="coupon">優惠券</string>
    <string name="used_record">使用紀錄</string>
    <string name="insufficient_balance">您的餘額不足！</string>
    <string name="use">使用</string>
    <string name="used_date_is">使用時間：%s</string>
    <string name="coupon_share_format">『%1$s』%2$s</string>

    <!-- Notification -->
    <string name="newest_info">最新消息</string>
    <string name="announcement">公告消息</string>
    <string name="personal_notification">個人通知</string>

    <!-- User Login -->
    <string name="authorization_error">認證更新失敗，請重新登入！</string>

    <!-- Wallet -->
    <string name="hs_pay">HSPay</string>
    <string name="my_qr_code">我的條碼</string>
    <string name="add_new_card">新增卡片</string>
    <string name="transaction_passcode">交易密碼</string>
    <string name="point_transfer">點數轉移</string>
    <string name="transaction_history">交易紀錄</string>
    <string name="re_scan">補登作業</string>
    <string name="set_passcode">設定交易密碼</string>
    <string name="enter_six_figures_passcode">輸入6位數交易密碼</string>
    <string name="confirm_the_passcode">再確認一次交易密碼</string>
    <string name="please_confirm_the_terms_of_hs_pay">請詳閱 HSPay 服務使用條款</string>
    <string name="password_verification">驗證交易密碼</string>
    <string name="fingerprint_input_hint">請輸入您的指紋</string>
    <string name="fingerprint_verify_success">指紋辨識成功</string>
    <string name="fingerprint_verify_failed">指紋辨識失敗</string>
    <string name="fingerprint_unavailable">不支援指紋辨識</string>

    <!-- Payment -->
    <string name="pay_by_cash">現金付款</string>
    <string name="use_point_discount">點數折抵</string>
    <string name="use_coupon">使用優惠券</string>
    <string name="select_coupon">選擇優惠券</string>
    <string name="refresh_qr_code">更新QRCode</string>
    <string name="coupon_scanned_hint">您的優惠券『%s』，已經成功核銷。</string>
    <string name="transaction_completed">交易完成</string>
    <string name="transaction_amount_and_reward_hint">您今日消費NT.%1$s，可累積%2$s點</string>

    <!-- Transactions -->
    <string name="hspay_transaction_history">HSPay 交易紀錄</string>
    <string name="pay_amount_is">%1$s：NT. %2$s 元</string>
    <string name="refund_amount_is">%1$s：-NT. %2$s 元</string>
    <string name="no_transaction_record">無交易紀錄</string>

    <!-- Credit Cards -->
    <string name="bind_credit_card">綁定信用卡</string>
    <string name="bind_credit_card_hint">透過信用卡刷卡支付交易金額</string>
    <string name="is_default">預設</string>
    <string name="confirm_to_set_as_default">是否設定為預設卡片</string>
    <string name="set_as_default">設為預設卡片</string>
    <string name="confirm_to_delete_card">是否確定要刪除此張卡片</string>
    <string name="confirm_to_delete">確定刪除</string>
    <string name="card">卡片</string>
    <string name="please_bind_credit_card_first">請先綁定信用卡</string>

    <!-- Using Points -->
    <string name="using_points">使用點數</string>
    <string name="available_points">目前可用點數</string>
    <string name="point_discount_hint">每1點折抵1元現金</string>
    <string name="discount_amount">可折抵金額</string>
    <string name="dollar_is">%s 元</string>
    <string name="point_limit">不可大於目前可用點數</string>

    <!-- Point Transfer -->
    <string name="please_enter_phone_number_to_transfer">請輸入手機號碼以轉移點數</string>
    <string name="please_enter_phone_number">請輸入手機號碼</string>
    <string name="point_transfer_description">請輸入接受點數的會員手機號碼\n\n請注意點數轉出動作不可取消，請確定輸入正確的電話號碼。</string>
    <string name="transfer_point">點數轉出</string>
    <string name="confirm_point_transferring">是否確認轉出 %1$d 點給會員電話 %2$s ?</string>
    <string name="point_transfer_success">點數已成功轉出</string>
    <string name="member_point_transfer">會員點數轉出</string>

    <!-- Scanning -->
    <string name="qr_code_scan">條碼掃描</string>
    <string name="please_move_camera_closer_to_qr_code">請將鏡頭靠近點數登入QRCode</string>
    <string name="light_hint">請在光源充足的地方掃描，避免辨識錯誤!</string>
    <string name="check_camera_permission">請檢查是否開啟攝影機權限</string>

    <!-- Sharing -->
    <string name="social_tag_title">H\'S VIBE 齊來卡</string>
    <string name="social_tag_description">● 「全台唯一生活美學領先體驗」紅利積點卡\n
        ● 每筆消費皆可回饋積點，享受生活之食宿、休閒、育樂等，不設限的跨產業兌點，享受一次購物、一齊滿足的豐富美好生活\n
        ● 手機即是會員卡：會員點數資料隨時查、好康優惠券隨兌隨用\n
        ● 國揚集團整合旗下飯店旅宿、餐飲美食、地產建設\n
        ● 高雄五星級指標飯店：漢來大飯店\n
        ● 公認CP值最高的漢來美食：擁有漢來海港、漢來蔬食、米其林星級粵菜名人坊餐廳、日式料理、上海湯包、火鍋、台菜等全台15個品牌，37間餐廳\n
        ● 國揚建設：全台首創購屋買房也可消費積點與兌點</string>

</resources>