<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_size_xxl"
        android:background="@drawable/background_corner_white_15dp" >

        <TextView
            android:id="@+id/text_dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/require_login_title"
            android:textColor="@color/md_grey_700"
            android:textSize="@dimen/font_text_size_l"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_dialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_xxl"
            tools:text="@string/require_login_content"
            android:textColor="@color/md_grey_700"
            android:textSize="@dimen/font_text_size_s"
            app:layout_constraintTop_toBottomOf="@+id/text_dialogTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/button_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_super"
            android:paddingStart="@dimen/padding_size_xxl"
            android:paddingEnd="@dimen/padding_size_xxl"
            android:paddingTop="@dimen/padding_size_xl"
            android:paddingBottom="@dimen/padding_size_xl"
            android:text="@string/cancel"
            android:textColor="@color/md_grey_700"
            android:textSize="@dimen/font_text_size_m"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_positive"
            app:layout_constraintTop_toBottomOf="@+id/text_dialogContent" />

        <TextView
            android:id="@+id/button_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_size_xxl"
            android:paddingEnd="@dimen/padding_size_xxl"
            android:paddingTop="@dimen/padding_size_xl"
            android:paddingBottom="@dimen/padding_size_xl"
            tools:text="@string/input_member_info"
            android:textColor="@color/md_grey_800"
            android:textSize="@dimen/font_text_size_m"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/background_main_theme_button"
            app:layout_constraintStart_toEndOf="@+id/button_negative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_negative" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
