<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="isValid"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_size_xxl"
        android:background="@drawable/background_main_gradient">

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/font_text_size_s"
            android:textColor="@color/md_white_1000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_size_l"
            android:maxLines="1"
            android:gravity="end"
            android:textSize="@dimen/font_text_size_s"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"
            android:textColorHint="@color/md_grey_500"
            android:inputType="textPassword"
            android:letterSpacing="0.2"
            android:hint="@string/password_hint"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@+id/text_password"
            app:layout_constraintBottom_toBottomOf="@+id/text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_confirmPassword"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view_divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_size_m"
            android:background="@color/md_grey_600"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

        <TextView
            android:id="@+id/text_confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="@dimen/font_text_size_s"
            android:textColor="@color/md_white_1000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_confirmPassword"
            app:layout_constraintBottom_toBottomOf="@+id/edit_confirmPassword"/>

        <EditText
            android:id="@+id/edit_confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_size_l"
            android:layout_marginTop="@dimen/padding_size_xxl"
            android:padding="@dimen/padding_size_l"
            android:maxLines="1"
            android:gravity="end"
            android:textSize="@dimen/font_text_size_s"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"
            android:textColorHint="@color/md_grey_500"
            android:inputType="textPassword"
            android:letterSpacing="0.2"
            android:hint="@string/confirm_password_hint"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_1"
            app:layout_constraintStart_toEndOf="@+id/text_confirmPassword"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view_divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_size_m"
            android:background="@color/md_grey_600"
            app:layout_constraintTop_toBottomOf="@+id/edit_confirmPassword" />

        <TextView
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_size_xl"
            android:paddingBottom="@dimen/padding_size_xl"
            android:enabled="@{isValid, default=false}"
            android:text="@string/confirm"
            android:textSize="@dimen/font_text_size_s"
            android:textColor="@color/color_button_text_selector"
            android:gravity="center"
            android:background="@drawable/background_main_theme_button"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
