<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_corner_white_15dp" >

        <TextView
            android:id="@+id/text_dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_xxl"
            tools:text="@string/redeem_coupon"
            android:textColor="@color/md_grey_900"
            android:textSize="@dimen/font_text_size_m"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_dialogContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_size_xl"
            android:layout_marginEnd="@dimen/padding_size_xl"
            android:layout_marginTop="@dimen/padding_size_xxl"
            tools:text="@string/confirm_to_redeem"
            android:textColor="@color/md_grey_700"
            android:textSize="@dimen/font_text_size_m"
            app:layout_constraintTop_toBottomOf="@+id/text_dialogTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view_divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding_size_super"
            android:background="@color/md_grey_300"
            app:layout_constraintTop_toBottomOf="@+id/text_dialogContent" />

        <View
            android:id="@+id/view_divider_2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/md_grey_300"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/button_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_super"
            android:paddingTop="@dimen/padding_size_xl"
            android:paddingBottom="@dimen/padding_size_xl"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/md_light_blue_A700"
            android:textSize="@dimen/font_text_size_m"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_divider_2"
            app:layout_constraintTop_toBottomOf="@+id/text_dialogContent" />

        <TextView
            android:id="@+id/button_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_size_xl"
            android:paddingBottom="@dimen/padding_size_xl"
            android:gravity="center"
            tools:text="@string/confirm"
            android:textColor="@color/md_red_A400"
            android:textSize="@dimen/font_text_size_m"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/view_divider_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_negative" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
