<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="mainViewModel"
            type="com.hsvibe.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main_gradient">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_size_xl"
            android:layout_marginStart="@dimen/icon_common_size_l"
            android:layout_marginEnd="@dimen/icon_common_size_l"
            app:cardBackgroundColor="@color/md_white_1000"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_size_l">

                <TextView
                    android:id="@+id/text_accumulationPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/font_text_size_s"
                    android:text="@string/accumulated_point"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view_divider"/>

                <TextView
                    android:id="@+id/text_pointHas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_size_xl"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/font_text_size_s"
                    android:text="@{@string/point_has(mainViewModel.liveCurrentBalance.balance)}"
                    tools:text="@string/point_has"
                    app:layout_constraintTop_toBottomOf="@+id/text_accumulationPoints"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view_divider"/>

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/text_accumulateSpent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/font_text_size_s"
                    android:text="@string/accumulated_spent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view_divider"/>

                <TextView
                    android:id="@+id/text_ntDollars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_size_xl"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/font_text_size_s"
                    android:text="@{@string/nt_amount_is(mainViewModel.liveCurrentBalance.accumulate)}"
                    tools:text="@string/nt_amount_is"
                    app:layout_constraintTop_toBottomOf="@+id/text_accumulateSpent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view_divider"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_yourPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_size_xxl"
            android:layout_marginTop="@dimen/padding_size_l"
            tools:text="@string/your_points_and_expires_time"
            android:textColor="@color/money_color"
            android:textSize="@dimen/font_text_size_xs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_pointHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_size_l"
            android:scrollbars="vertical" />

    </LinearLayout>

</layout>